--- a/Final_Website/index.html
+++ b/Final_Website/index.html
@@ -40,20 +40,127 @@
     </div>
 
 <!--explore button ke leye -->
+
     <div class="explore">
       <a href="">Explore Air <i class="ri-arrow-down-s-line"></i></a>
     </div>
 
+    <!-- Societal Mission Page keleye -->
     <div class="mission">
       <h1>A Societal Mission</h1>
        <p>Air was founded almost 23 years ago on a bedrock of societal purpose. Our mission is to contribute to the world by educating students for lives of leadership and contribution with integrity; advancing fundamental knowledge and cultivating creativity; leading in pioneering research for effective clinical therapies; and accelerating solutions and amplifying their impact.</p>
        <button>More About Air</button> 
     </div>
 
-    <div class="campus-news">
+<!-- Campus New page -->
+    
+<div class="campus-news">
       <h1>Campus News</h1>
+       <div id="campus-news-img-1">
+         <p>
+          IR Stundets: <br> Making Solutions for Betterment 
+         </p>
+        </div>
+       
+       <div id="campus-news-img-2">
+        <p>
+         Medical Stundet: <br>Discoverd a New Specie
+        </p>
+      </div>
+      <!-- campus news section four images -->
+      <img id="img-1" src="/images/p4.jpg" alt="image">
+      <img id="img-2" src="/images/p5.jpg" alt="image">
+      <img id="img-3" src="/images/p6.jpg" alt="image">
+      <img id="img-4" src="/images/p7.jpg" alt="image">
 
+      <div id="for-img-1">
+        <p>Medicine: <br> Cancer Cure Discoverd</p>
+      </div>
+      <div id="for-img-2">
+        <p>Science: <br> Fastest Jet Engine Made</p>
+      </div>
+
+      <div id="for-img-3">
+        <p>Techonology: <br> World Strongest Virus</p>
+      </div>
+
+      <div id="for-img-4">
+        <p>Psychology: <br> Manipulationg Techniques</p>
+      </div>
       <button>More Campus News</button>
     </div>
+
+<!-- Academics page ke leye  -->
+
+<section class="academics">
+
+<div class="academics-2">
+<h1>Academics</h1>
+<br>
+<p>Preparing students to make meaningful contributions to society as <br> engaged citizens and leaders in a complex world</p>
+<br>
+
+<div class="degrees-images">
+  <img src="/images/p3.jpg" alt="image">
+  <img src="/images/p5.jpg" alt="image">
+  <img src="/images/p6.jpg" alt="image">
+</div>
+
+<div class="degrees-category">
+  <div>
+    <h3>Undergraduate Education</h3>
+
+  <p>Rich learning experiences that provide <br> a broad liberal arts <br> foundation and deep subject-area expertise</p>
+  
+  <a href="#">Undergraduate Education<i class="ri-arrow-right-s-line"></i></a>
+</div>
+
+
+<div>
+  <h3>Graduate Education</h3>
+  
+  <p>Unsurpassed opportunities to participate in the <br> advancement of entire fields of knowledge</p>
+  
+  <a href="#">Graduate Education<i class="ri-arrow-right-s-line"></i></a>
+</div>
+
+<div>
+  <h3>Driving Impact</h3>
+  
+  <p>Continuing adult education, executive and <br> professional programs, and programs for K-12 <br> students
+
+  </p>
+  
+  <a href="#">Lifelong Learning<i class="ri-arrow-right-s-line"></i></a> 
+</div>
+
+</div>
+<h3 id="degree-tagline">Seven schools in which to pursue your passions</h3>
+
+<div >
+  <ul class="degrees">
+    <li>Medicine</li>
+    <li> Law</li>
+    <li> Humanities & Sciences</li>
+    <li> Engineering</li>
+    <li> Education</li>
+    <li> Sustainability</li>
+    <li> Business</li>
+  </ul>
+</div>
+<button>More About Academics</button>
+</div>
+
+</section>
+
+<!-- Meet Alexa Section  -->
+<section class="meet-me">
+
+  <h3>Meet Alexa</h3>
+  <p><i>Class of 2023</i></p>
+  <a href="#">More<i class="ri-arrow-right-s-line"></i></a>
+</section>
+
+
   </body>
 </html>
